--- a/home.html
+++ b/home.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tabla de Pasos modificado</title>
+    <title>Tabla de Pasos modificado rama2</title>
 
     <style>
         table {
