final home con comentarios

--- a/home.html
+++ b/home.html
@@ -30,13 +30,13 @@
         <th>¿Logrado?</th>
         <th>Dudas</th>
     </tr>
-    <tr><td>1</td><td></td><td></td></tr>
-    <tr><td>2</td><td></td><td></td></tr>
-    <tr><td>3</td><td></td><td></td></tr>
-    <tr><td>4</td><td></td><td></td></tr>
-    <tr><td>5</td><td></td><td></td></tr>
-    <tr><td>6</td><td></td><td></td></tr>
-    <tr><td>7</td><td></td><td></td></tr>
+    <tr><td>1</td><td>si</td><td>ninguna</td></tr>
+    <tr><td>2</td><td>si</td><td>ninguna</td></tr>
+    <tr><td>3</td><td>si</td><td>ninguna</td></tr>
+    <tr><td>4</td><td>si</td><td>ninguna</td></tr>
+    <tr><td>5</td><td>si</td><td>ninguna</td></tr>
+    <tr><td>6</td><td>si</td><td>ninguna</td></tr>
+    <tr><td>7</td><td>si</td><td>dificultades en resolver conflictos pero tb</td></tr>
 </table>
 
 </body>
